# chatdb-v2

./: .env.example  .gitignore  README.md  checkpoints.md  deploy.sh  docker-compose.yml  ecosystem.config.cjs  nginx.prod.conf
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: analytics.py  query.py  schema.py  session.py  upload.py
backend/app/core/: config.py  llm.py  security.py
backend/app/db/: mongodb.py  postgres.py  session.py
backend/app/models/: analytics.py  query.py  session.py
backend/app/services/: analytics.py  data_loader.py  query_generator.py  query_validator.py  schema_inspector.py
datasets/cybersecurity/: assets.csv  scan_results.csv  security_events.csv  vulnerabilities.csv
datasets/ecommerce/: customers.csv  order_items.csv  orders.csv  products.csv
datasets/education/: courses.csv  enrollments.csv  students.csv
datasets/hr/: README.md  employees.csv  performance_reviews.csv  salary_history.csv
datasets/iot/: sensor_readings.json
datasets/medical/: README.md  doctors.csv  patients.csv  prescriptions.csv  visits.csv
datasets/real_estate/: agents.csv  properties.csv  transactions.csv
datasets/restaurant/: menu_items.csv  order_details.csv  orders.csv
datasets/sales/: README.md  activities.csv  catalog.csv  deals.csv  orders.csv  sales_reps.csv
frontend/: .dockerignore  index.html  package-lock.json  package.json  vite.config.ts
scripts/: check_static_suggestions.py  generate_datasets.py  setup_mongo.sh  setup_postgres.sh
(+14 files in other folders)
